Fixed alignment of checkout

--- a/src/app/modules/products/nextcloud/nextcloud.component.scss
+++ b/src/app/modules/products/nextcloud/nextcloud.component.scss
@@ -5,6 +5,5 @@
 }
 
 .flex-item {
-    flex-grow: 0;
     padding: 1rem;
 }
